Corrected some header alignment issues.

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,4 +1,5 @@
 .header {
+  align-items: baseline;
   height: 70px;
   width: 100%;
   display: flex;
